--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <title>Nodebrew</title>
   </head>
   <body style="margin: 0px; padding: 0px; margin-bottom: -10px;">
