changed meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Pull up a digital chair by the 1s and 0s and stay a while at my personal spot on the internet :)"
+      content="Empowering the future of tech through accessible resources and educational opportunity to promote inclusivity"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
