--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Empowering the future of tech through accessible resources and educational opportunity to promote inclusivity"
-    />
     <meta name=”robots” content="index, follow" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -18,6 +14,10 @@
   <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <title>Nodebrew</title>
   </head>
+  <meta
+      name="description"
+      content="Nodebrew focuses on empowering the future of tech through accessible resources and educational opportunity to promote inclusivity"
+    />
   <body style="margin: 0px; padding: 0px; margin-bottom: -10px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
